[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true }
futures-util = { workspace = true }
histogram = { workspace = true }
jito-protos = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
jito-searcher-client = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-memo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
