[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
crossbeam-channel = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
histogram = { workspace = true }
jito-protos = { workspace = true }
log = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
jito-searcher-client = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-memo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
